# jeff

./: .gitignore  .mise.toml  AGENTS.md  README.md  install.sh  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
agent-skills/jeff-bdd/: SKILL.md
agent-skills/jeff-help/: SKILL.md
agent-skills/jeff-hypothesis/: SKILL.md
agent-skills/jeff-init/: SKILL.md
agent-skills/jeff-issues/: SKILL.md
agent-skills/jeff-map/: SKILL.md
agent-skills/jeff-opportunity/: SKILL.md
agent-skills/jeff-research/: SKILL.md
commands/: bdd.md  help.md  hypothesis.md  init.md  issues.md  jeff-bdd.md  jeff-help.md  jeff-hypothesis.md  jeff-init.md  jeff-issues.md  jeff-map.md  jeff-opportunity.md  jeff-research.md  map.md  opportunity.md  research.md
scripts/: sync-plugin-commands.sh
skills/bdd/: SKILL.md
skills/bdd/examples/: enriching-from-opportunity.md  full-map-to-tasks.md  regenerating-one-activity.md
skills/bdd/references/: acceptance-criteria.md  edge-cases.md  troubleshooting.md
skills/help/: SKILL.md
skills/help/references/: workflow-overview.md
skills/hypothesis/: SKILL.md
skills/init/: SKILL.md
skills/issues/: SKILL.md
skills/jeff-bdd/: SKILL.md
skills/jeff-help/: SKILL.md
skills/jeff-hypothesis/: SKILL.md
skills/jeff-init/: SKILL.md
skills/jeff-issues/: SKILL.md
skills/jeff-map/: SKILL.md
skills/jeff-opportunity/: SKILL.md
skills/jeff-research/: SKILL.md
skills/map/: SKILL.md
skills/opportunity/: SKILL.md
skills/research/: SKILL.md
src/jeff/: __init__.py  cli.py  config.py
(+93 files in other folders)
